--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>PDF to HTML Converter</h1>
   <input type="file" id="pdfInput" accept="application/pdf">
-  <div id="htmlOutput"></div>
+  <input type="text" id="htmlOutput" readonly>
+  <button id="copyButton" disabled>Copy URL</button>
 </body>
 </html>
