--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <h1>PDF to HTML Converter</h1>
   <input type="file" id="pdfInput" accept="application/pdf">
-  <input type="text" id="htmlOutput" readonly>
   <button id="copyButton" disabled>Copy URL</button>
+  <input type="text" id="htmlUrl" readonly>
+  <div id="htmlOutput"></div>
 </body>
 </html>
